# qualichat_intelligence

./: .env.example  .gitignore  Dockerfile  README.md  chat_history.db  chat_history.json  ingest.py  pyproject.toml  run.py
app/: main.py
app/cli/: __init__.py  main_cli.py
app/core/: config.py  document_factory.py  factory.py  logger.py  patches.py
app/graphs/: __init__.py  base_graph.py  conversation_graph.py
app/models/: document.py  embedding.py  history.py  user.py
app/repositories/: __init__.py  base_repository.py  chroma_repository.py  document_repository.py  history_repository.py  sqlite_repository.py  user_repository.py
app/services/: __init__.py  embeddings_service.py  ingestion_service.py  llm_service.py  rag_pipeline.py  retrieval_service.py
chroma_db/: chroma.sqlite3
documents/default_user/: ingestion_manifest.json
graph/: __init__.py  builder.py  state.py
graph/nodes/: __init__.py  initial_request.py
history/: user_default_user.db
relatorios/: AUDITORIA_CODIGO.md  AUDITORIA_TESTES_AUTOMATIZADOS.md  RELATORIO_TECNICO_MVP.md
tests/: test_placeholder.py
tests/core/: test_document_factory.py
tests/integration/: test_rag_pipeline.py
tests/models/: test_user.py
tests/repositories/: test_document_repository.py  test_history_repository.py
tests/services/: test_embeddings_service.py  test_llm_service.py
