[tool.poetry]
name = "qualichat_intelligence"
version = "0.1.0"
description = "Intelligent backend for Qualichat"
authors = ["Your Name <you@example.com>"]
packages = [{include = "app"}]


[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.0.20"
langchain = "^0.1.20"
litellm = "^1.34.2"
chromadb = "^0.4.24"
loguru = "^0.7.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
pysqlite3-binary = "^0.5.2"
posthog = ">=2.4.0,<6.0.0"
pypdf = "^4.2.0"
pyyaml = "^6.0.1"
langchain-community = "^0.0.38"

[tool.poetry.dev-dependencies]
